--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Help", help_path %></li>
-            <li> <%# = link_to "Log out", logout_path, method: "delete" %></li>
+            <li> <%= link_to "Log out", logout_path, method: "delete" %></li>
             <% if logged_in? %>
                 <li><%= link_to "Users", users_path %></li>
                 <li class="dropdown">
